--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,6 @@
-include README.md
 include README_zh.md
+include README.md
 include LICENSE
+include setup.py
+include pyproject.toml
+include MANIFEST.in
