--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "dbinspector"
 version = "0.1.0"
 description = ""
 authors = ["Astro Xu <astroxu24@outlook.com>"]
-license = "mit"
+license = "bsd"
 readme = "README.md"
 
 [tool.poetry.dependencies]
@@ -14,7 +14,7 @@ jinja2 = "^3.1.5"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
-
-[build-system]
-requires = ["setuptools", "wheel"]
-build-backend = "setuptools.build_meta"
+#
+#[build-system]
+#requires = ["setuptools", "wheel"]
+#build-backend = "setuptools.build_meta"
